--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,1 +1,29 @@
+{%extends 'base.html'%}
+{%block title%}
+Sign Up
+{%endblock%}
+{%block content%}
+<h1 style="text-align:center ;">Sign Up</h1>
+<br>
+<form action="{{ url_for('auth.sign_up') }}" method="POST">
+<h5> Name</h5>
+<input name='name' class="form-control" type="text" placeholder="Name" aria-label="default input example" style="margin-bottom: 7px;">
+<h5> Email-id </h5>
+<input name='email'class="form-control" type="text" placeholder="Email" aria-label="default input example"style="margin-bottom: 7px;">
+<h5> Registration Number </h5>
+<input name='regNo' class="form-control" type="text" placeholder="Registration No" aria-label="default input example"style="margin-bottom: 7px;">
+<h5> Password </h5>
+<input name='password' type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+<div id="passwordHelpBlock" class="form-text"style="margin-bottom: 7px;">
+  Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+</div>
+<h5>Confirm Password </h5>
+<input name='confirmPassword' type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+<div id="passwordHelpBlock" class="form-text"style="margin-bottom: 7px;">
+</div>
 
+<div class="d-grid gap-2 col-4 mx-auto" >
+  <button class="btn btn-dark" type="submit" >Sign Up</button>
+</div>
+</form>
+{%endblock%}
